# RAGStack-Lambda

./: .coverage  .env.amplify.example  .gitignore  .pre-commit-config.yaml  AMPLIFY_TS.md  CHANGELOG.md  CLAUDE.md  CONFIG_AMP_KIT.md  DEPLOYMENT_STATUS.md  ENCRYPTION_ANALYSIS_INDEX.md  ENCRYPTION_COMPARISON_FINAL.txt  ENCRYPTION_COMPARISON_SUMMARY.txt  FRONTEND_CONTRAST.md  LICENSE  NOTICE  PHASE3_RESULTS.md  PR_SUMMARY.md  README.md  REVIEW_NOTES.md  START_HERE.md  TESTING_CHANGES.md  TEST_FIXES_NEEDED.md  TEST_USAGE.md  TROUBLESHOOTING_WEB_COMPONENT.md  WEB_COMPONENT_TROUBLESHOOTING.md  baseline-backend.txt  baseline-frontend.txt  baseline-summary.txt  check-amplify-build.sh  check-amplify-config.sh  check-amplify-outputs.sh  check-bundle-format.sh  check-cdk-stack.sh  check-cdn-format.html  check-cdn-permissions.sh  check-cdn-tail.html  check-cdn-version.sh  check-codebuild-logs.sh  check-config-values.sh  check-source-package.sh  (+39 more)
.claude/: SUBAGENTS_USAGE.md  skill-runs.json
.claude/agents/: config-pattern-finder.md  explore-base-architecture.md  explore-base-docs.md  explore-base-general.md  explore-base-infrastructure.md  explore-base-testing.md
.cleanup-reports/: audit_20251223_124853.md  doc_audit_20231223.md  knip-chat.txt  knip-ui.txt  vulture.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  dependabot-auto-merge.yml  publish-mcp.yml  release.yml  test.yml
.serena/: project.yml
.serena/memories/: cleanup_session_2026_01_16.md  consolidation_plan.md  project_overview.md  style_conventions.md  suggested_commands.md  sync_coordinator_plan.md  task_completion.md
amplify/: backend.ts  cdk.json  eslint.config.mjs  package-lock.json  package.json  schema.graphql  tsconfig.json  vitest.config.js
amplify/auth/: resource.ts
amplify/coverage/: coverage-final.json  index.html
amplify/data/: config.template.ts  config.test.ts  config.ts  resource.test.ts  resource.ts
amplify/lib/: backend-stack.ts
docs/: .drift-report.md  AMPLIFY_CHAT.md  AMPLIFY_STACK_NAMING.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_OPTIONAL_STACKS.md  CLEANUP_AUDIT.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  ENCRYPTION_COMPARISON.md  IMAGE_UPLOAD.md  LIBRARY_REFERENCE.md  METADATA_FILTERING.md  MIGRATION.md  NESTED_STACK_DEPLOYMENT.md  OPTIMIZATION.md  PHASE5_TESTING.md  RAGSTACK_CHAT.md  TESTING.md  TROUBLESHOOTING.md  UI.md  UI_IMPROVEMENTS.md  USER_GUIDE.md  WEB_SCRAPING.md  phase-2-implementation-notes.md  phase-3-completion-summary.md
docs/plans/: INTEGRATION_TEST_CHECKLIST.md  MANUAL_TESTING_CHECKLIST.md  PLAN_REVIEW.md  PROPOSED_FIXES.md  Phase-0.md  Phase-1.md  Phase-2.md  Phase-3.md  Phase-4.md  README.md
lib/: requirements.txt  setup.py
lib/ragstack_common/: README.md  __init__.py  appsync.py  auth.py  bedrock.py  (+31 more)
scripts/: build_layer.sh  check_costs.sh  cleanup-analyze.sh  cleanup-python.sh  cleanup-typescript.sh  configure_ui.sh  invalidate_cloudfront.sh  migrate_v1_to_v2.py
tests/: conftest.py  test-api-auth.sh
(+541 files in other folders)
